[package]
name = "pgn-lexer"
version = "0.2.2-alpha"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>", "datawater"]
edition = "2018"
description = "A lexer for PGN files for chess. Provides an iterator over the tokens from a byte stream."
repository = "https://github.com/datawater/pgn-lexer"
readme = "README.md"
keywords = ["chess", "pgn", "lexer", "tokenizer"]
categories = ["parser-implementations"]
license = " GPL-3.0"
exclude = ["examples/*"]

[dependencies]
nom = { version = "8.0.0", features = [] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parsing"
harness = false

